--- a/P009515.opf/meta.yml
+++ b/P009515.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009515
+id: P009515
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG25692
   title: བོད་ལྗོངས་སློབ་གྲྭ་ཆེན་མོའི་རིག་དེབ་ཀྱི་བོད་རིག་པའི་ཞིབ་འཇུག་དཔྱད་རྩོམ་གཅེས་བཏུས།
-  volume: ''
   author: ''
+  volumes: {}
