volumes of meta updated

--- a/P009515.opf/meta.yml
+++ b/P009515.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG25692
   title: བོད་ལྗོངས་སློབ་གྲྭ་ཆེན་མོའི་རིག་དེབ་ཀྱི་བོད་རིག་པའི་ཞིབ་འཇུག་དཔྱད་རྩོམ་གཅེས་བཏུས།
   author: ''
-  volumes: {}
+  volumes:
+    5c2486497c2c43359820623aad2aa474:
+      image_group_id: I1KG25694
+      title: ''
+      volume_number: 1
+      total_pages: 715
