--- a/P009515.opf/layers/v001/Pagination.yml
+++ b/P009515.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e84c263625b04e8a8cb571bfbaceb515
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d34a54d0cad44e63accb5314ab6449c5:
