--- a/P009515.opf/meta.yml
+++ b/P009515.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009515
 initial_creation_type: ocr
+created_at: 28/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1KG25692
   title: བོད་ལྗོངས་སློབ་གྲྭ་ཆེན་མོའི་རིག་དེབ་ཀྱི་བོད་རིག་པའི་ཞིབ་འཇུག་དཔྱད་རྩོམ་གཅེས་བཏུས།
