--- a/P009515.opf/meta.yml
+++ b/P009515.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009515
 initial_creation_type: ocr
 created_at: 28/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:35:16.901837
 source_metadata:
   id: bdr:W1KG25692
   title: བོད་ལྗོངས་སློབ་གྲྭ་ཆེན་མོའི་རིག་དེབ་ཀྱི་བོད་རིག་པའི་ཞིབ་འཇུག་དཔྱད་རྩོམ་གཅེས་བཏུས།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 715
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: true
